# ink-Stable-Coin

./: README.md
contracts/: README.md
contracts/oracle-contracts/oracle/: lib.rs
contracts/oracle-contracts/oracle-getter/: lib.rs
contracts/oracle-contracts/oracle-setter/: Cargo.toml
contracts/reward/: Cargo.toml  lib.rs
contracts/stable-coin/: Cargo.toml  lib.rs
ink! stable coin final/contracts/oracle_contracts/oracle/: Cargo.toml
ink! stable coin final/contracts/oracle_contracts/oracle-getter/: Cargo.toml
ink! stable coin final/contracts/oracle_contracts/oracle-setter/: lib.rs
