[package]
name = "reward"
version= "4.0.0-beta.1"

edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
stable_coin = {path = "../stable-coin", default-features = false}


[dev-dependencies]

[lib]
name = "reward"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16