[package]
name = "stable_coin_contract"
version= "4.0.0-beta.1"
authors = ["Brushfam <dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
dia-oracle-getter = { path = "../oracle-contracts/oracle-getter", default-features = false }
# These dependencies
openbrush = { tag = "v4.0.0-beta", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["ownable", "psp22"] }
drink = { version = "0.6" }
[dev-dependencies]
dia-oracle = { path = "../oracle-contracts/oracle", default-features = false }
dia-oracle-setter = { path = "../oracle-contracts/oracle-setter", default-features = false }
[lib]
name = "stable_coin_contract"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
    "dia-oracle-getter/std"
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16